# evm-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLAN-V10.md  PLAN.md  README.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  nightly-fuzz.yml  release.yml
docs/: architecture.md  code_allocation.md  commands.md  troubleshooting.md
docs/adr/: 0001-alloy-version.md  0002-nonce-manager.md  0003-workspace-split.md  0004-upgrade-policy.md  0005-panic-hook.md  0006-error-codes.md  0007-secret-memory.md  0008-rbf-cancel.md  0009-eth-keystore-deviation.md
docs/audit/: M6.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_keystore_json.rs  fuzz_rlp_decode.rs  fuzz_signature_recover.rs
scripts/: build_release_artifact.sh  secret_string_grep.sh
src/: error.rs  lib.rs  main.rs  release.rs
src/chain/: alloy_chain.rs  client.rs  erc20.rs  mod.rs  nonce.rs  rbf.rs
src/cli/: commands.rs  config.rs  history.rs  mod.rs  output.rs  pure.rs  session.rs
src/crypto/: address.rs  keccak.rs  mnemonic.rs  mod.rs  sign.rs
src/keystore/: mod.rs
src/types/: address.rs  amount.rs  block_number.rs  chain_id.rs  mod.rs  nonce.rs  secret.rs  signature.rs  tx_hash.rs
tests/: e2e_sepolia_bump.rs  it_cli_repl.rs  it_docs.rs  it_eth_transfer.rs  it_panic_hook.rs  it_release.rs  it_release_workflow.rs
