[package]
name = "evm-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"  # raised 2026-06-11 from 1.91 (see PLAN-V9 §18 changelog + ADR-0001)
description = "Linux-only CLI wallet for Sepolia testnet"
license = "MIT"
repository = "https://github.com/<org>/evm-cli"
readme = "README.md"
publish = false  # V1 has no published lib

[lib]
name = "evm_cli"
path = "src/lib.rs"

[[bin]]
name = "evm-cli"
path = "src/main.rs"

# ────────────────────────────────────────────────────────────────────
# M0 dependencies (used in scaffolding)
# ────────────────────────────────────────────────────────────────────
[dependencies]
# Process hardening (ADR-0005, ADR-0007)
human-panic = "=2.0.8"
libc = "=0.2.186"  # kept compatible with nix 0.31.3

# Secret memory (ADR-0007)
zeroize = { version = "=1.8.2", features = ["zeroize_derive"] }
os-memlock = "=0.2.0"  # mlock(2) wrapper; ADR-0007's ≥32B threshold
static_assertions = "=1.1.0"

# Error system (ADR-0006)
anyhow = "=1.0.102"
thiserror = "=2.0.18"

# Observability (V8 §11 step 4)
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter", "fmt"] }

# ────────────────────────────────────────────────────────────────────
# M1+ dependencies (declared early per V8 §11; will be used in
# Crypto/Chain/CLI phases). Allowed unused at M0 to keep the spec
# consistent with V8 step 4.
# ────────────────────────────────────────────────────────────────────
alloy                   = { version = "=2.0.5", features = ["essentials", "signer-local", "provider-http", "rpc-types", "node-bindings"] }
alloy-provider          = "=2.0.5"
alloy-transport-http     = "=2.0.5"
alloy-network           = "=2.0.5"
alloy-eips               = "=2.0.5"
alloy-consensus         = "=2.0.5"
alloy-rlp               = "=0.3.15"
alloy-contract          = "=2.0.5"
alloy-sol-types         = "=1.6.0"
alloy-primitives        = "=1.6.0"
alloy-signer            = "=2.0.5"
alloy-signer-local      = { version = "=2.0.5", features = ["mnemonic", "keystore"] }
# HTTP client used by alloy's transport layer.
reqwest                 = { version = "=0.12.24", default-features = false, features = ["rustls-tls", "json"] }
nix                     = { version = "=0.31.3", features = ["fs"] }
directories             = "=6.0.0"
clap                    = { version = "=4.6.1", features = ["derive"] }
rustyline               = "=18.0.0"
serde                   = { version = "=1.0.228", features = ["derive"] }
toml                    = "=1.1.2"
# M1: Keccak-256 (per V8 §5 M1 DoD; sha3 crate forbidden)
tiny-keccak             = { version = "=2.0.2", features = ["keccak"] }
# M1: BIP-39 wordlist (transitive via alloy-signer-local; declared
# explicitly here so we can use `coins_bip39::Mnemonic` directly in
# src/crypto/mnemonic.rs)
coins-bip39             = "=0.12.0"
# M1: thread_rng() for mnemonic generation
rand                    = "=0.8.5"
# M1: async runtime for async signer APIs (Signer::sign_message is async)
tokio                   = { version = "=1.46.1", features = ["rt", "macros", "time"] }
# M2: standard Ethereum keystore format (deviation from V8 §5 M2 spec
# which specified Argon2id + AES-256-GCM; rationale: user chose
# interoperability with geth/ethers.js etc. — see V10 §19 changelog)
eth-keystore            = "=0.5.0"
# M2: JSON for AliasIndex serialization
serde_json              = "=1.0.150"
# M2: atomic write staging (ADR-0007 rev1: ZeroizingTempFile; the standard
# tempfile crate provides RAII cleanup; our wrapper zeroizes on drop)
tempfile                = "=3.27.0"
# M3: rate limiter (governor) for the RPC client. Default quota is
# per-second, configurable; the V8 §5 M3 spec asks for 25 req/s
# (Infura free tier ceiling).
governor                = "=0.10.4"
# M3: URL parser for the RPC endpoint.
url                     = "=2.5.0"

[dev-dependencies]
assert_cmd = "=2.1.1"  # ADR-0005: tests/it_panic_hook.rs
# M1: property-based testing for personal_sign variants + EIP-55 checksums
proptest = "=1.11.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"        # ADR-0007: no unwind, no backtrace
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
